--- a/src/app/educations/education-list/education-item/education-item.component.html
+++ b/src/app/educations/education-list/education-item/education-item.component.html
@@ -1,12 +1,11 @@
 <a
-  href="#"
-  class="list-group-item clearfix">
+  class="list-group-item clearfix"
+  (click)="onSelected()"
+  style="cursor: pointer;">
   <div class="pull-left">
-    <h3 class="list-group-item-heading" style="font-weight: bolder">{{ exp.title }}</h3>
-    <h4 class="list-group-item-text" style="font-weight: bold">{{ exp.company }}</h4>
-    <h4 class="list-group-item-text">{{ exp.empType }}</h4>
-    <h4 class="list-group-item-text">{{ exp.startDate }} - {{ exp.endDate }}</h4>
-    <h4 class="list-group-item-text">{{ exp.location }}</h4>
+    <h3 class="list-group-item-heading">{{ edu.school }}</h3>
+    <h4 class="list-group-item-text">{{ edu.degree }}, {{ edu.fieldOfStudy }}, {{ edu.grade }}</h4>
+    <h4 class="list-group-item-text">{{ edu.startDate }} - {{ edu.endDate }}</h4>
   </div>
   <!--      <span class="pull-right">-->
   <!--        <img-->
