--- a/src/app/educations/educations.component.html
+++ b/src/app/educations/educations.component.html
@@ -6,12 +6,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12" id="about-css">
-    <app-education-detail
-      *ngIf="selectedEdu; else infoText"
-      [edu]="selectedEdu"></app-education-detail>
-    <ng-template #infoText>
-      <h3>Please select an education to view details!!</h3>
-    </ng-template>
+    <router-outlet></router-outlet>
     <hr>
   </div>
 </div>
