--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -6,12 +6,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12" id="about-css">
-    <app-experience-detail
-      *ngIf="selectedExp; else infoText"
-      [exp]="selectedExp"></app-experience-detail>
-    <ng-template #infoText>
-      <h3>Please select an experience to view details!!</h3>
-    </ng-template>
+    <router-outlet></router-outlet>
     <hr>
   </div>
 </div>
