--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse ">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a routerLink="/" class="navbar-brand">
+      <a class="navbar-brand">
         <img
           [src]= "linkedinlogo"
           alt="Linkedin"
@@ -30,12 +30,12 @@
         </li>
         <li
           routerLinkActive="active">
-          <a routerLink="/education">
+          <a routerLink="/educations">
           Education</a>
         </li>
         <li
           routerLinkActive="active">
-          <a routerLink="/experience">
+          <a routerLink="/experiences">
           Experience</a>
         </li>
         <li
