--- a/src/app/educations/education-list/education-item/education-item.component.html
+++ b/src/app/educations/education-list/education-item/education-item.component.html
@@ -1,6 +1,7 @@
 <a
   class="list-group-item clearfix"
-  (click)="onSelected()"
+  [routerLink]="[index]"
+  routerLinkActive="active"
   style="cursor: pointer;">
   <div class="pull-left">
     <h3 class="list-group-item-heading">{{ edu.school }}</h3>
@@ -14,13 +15,4 @@
   <!--          class="img-responsive"-->
   <!--          style="max-height: 50px;">-->
   <!--      </span>-->
-  <div class="pull-right">
-    <button type="button" class="btn btn-link" id="btns">
-      <img
-        src="https://image.flaticon.com/icons/png/512/1239/1239335.png"
-        alt="Edit"
-        class="img-responsive"
-        id="add-img">
-    </button>
-  </div>
 </a>
