--- a/src/app/educations/education-list/education-list.component.html
+++ b/src/app/educations/education-list/education-list.component.html
@@ -6,7 +6,7 @@
         <h2 style="font-weight: bold">Education</h2>
       </div>
       <div class="pull-right">
-        <button type="button" class="btn btn-link" id="btns">
+        <button type="button" class="btn btn-link" id="btns" (click)="onNewEducation()">
           <img
             src="https://image.flaticon.com/icons/png/512/1237/1237946.png"
             alt="Add"
@@ -15,8 +15,9 @@
         </button>
       </div>
     </a>
-    <app-education-item *ngFor="let eduEl of educations"
-                        [edu]="eduEl"></app-education-item>
+    <app-education-item *ngFor="let eduEl of educations; let i = index"
+                        [edu]="eduEl"
+                        [index]="i"></app-education-item>
   </div>
 </div>
 
