--- a/src/app/experiences/experience-detail/experience-detail.component.html
+++ b/src/app/experiences/experience-detail/experience-detail.component.html
@@ -9,4 +9,21 @@
     <h4 class="list-group-item-text">End Date: {{ exp.endDate }}</h4>
     <h4 class="list-group-item-text">Description: {{ exp.description }}</h4>
   </div>
+
+  <div class="pull-right">
+    <button type="button" class="btn btn-link" id="btns" (click)="onEditExperience()">
+      <img
+        src="https://image.flaticon.com/icons/png/512/1239/1239335.png"
+        alt="Edit"
+        class="img-responsive"
+        id="add-img">
+    </button>
+    <button type="button" class="btn btn-link" id="btns">
+      <img
+        src="https://image.flaticon.com/icons/png/512/1214/1214594.png?w=900"
+        alt="Delete"
+        class="img-responsive"
+        id="add-img">
+    </button>
+  </div>
 </a>
