--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,23 @@
 <div class="row formCss">
   <div class="col-xs-12">
-    <h2 style="color: white;">Welcome to Linkedin Page! Login to your account!</h2>
+    <h2 style="color: white;">Welcome to Linkedin Page! Register here!</h2>
     <hr>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name" style="color: white;">Full Name</label>
+            <input
+              type="text"
+              id="name"
+              formControlName="name"
+              class="form-control">
+            <span
+              *ngIf="!registerForm.get('name').valid && registerForm.get('name').touched"
+              class="help-block">Name is required!</span>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
@@ -13,7 +28,7 @@
               formControlName="email"
               class="form-control">
             <span
-              *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched"
+              *ngIf="!registerForm.get('email').valid && registerForm.get('email').touched"
               class="help-block">Invalid Email!</span>
           </div>
         </div>
@@ -21,14 +36,14 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="password" style="color: white;">Password</label>
+            <label for="password" style="color: white;">Create Password</label>
             <input
               type="password"
               id="password"
               formControlName="password"
               class="form-control">
             <span
-              *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched"
+              *ngIf="!registerForm.get('password').valid && registerForm.get('password').touched"
               class="help-block">Password is required!</span>
           </div>
         </div>
@@ -38,18 +53,9 @@
           <button
             type="submit"
             class="btn btn-default"
-            [disabled]="!loginForm.valid" style="margin-right: 5%">Login</button>
+            [disabled]="!registerForm.valid" style="margin-right: 5%">Register</button>
           <button type="button" class="btn btn-default"
-                  routerLink="/register">Register</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 text-center">
-          <h3>
-             <span
-               *ngIf="error"
-               class="help-block">Invalid Credentials!</span>
-          </h3>
+                  routerLink="/login">Cancel</button>
         </div>
       </div>
     </form>
