Connected front end with backend for login and register functionality

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,11 +23,11 @@
 
     <div class="navbar-default">
       <ul class="nav navbar-nav navbar-right">
-        <li
-          routerLinkActive="active">
-          <a routerLink="/login">
-            Login/Register</a>
-        </li>
+<!--        <li-->
+<!--          routerLinkActive="active">-->
+<!--          <a routerLink="/login">-->
+<!--            Login/Register</a>-->
+<!--        </li>-->
         <li
           routerLinkActive="active">
           <a routerLink="/about">
