--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,9 +50,8 @@
       <div class="row">
         <div class="col-xs-12 text-center">
           <h3>
-             <span
-               *ngIf="error"
-               class="help-block">Invalid Credentials!</span>
+             <span *ngIf="error"
+               class="help-block">{{ message }}</span>
           </h3>
         </div>
       </div>
