Delete and create skill functionality

--- a/src/app/educations/education-detail/education-detail.component.html
+++ b/src/app/educations/education-detail/education-detail.component.html
@@ -17,7 +17,7 @@
     </button>
   </div>
 
-  <div class="pull-left">
+  <div class="pull-left" id="education_details">
     <h3 class="list-group-item-heading" style="font-weight: bolder">School: {{ edu.school }}</h3>
     <h4 class="list-group-item-text" style="font-weight: bold">Degree: {{ edu.degree }}</h4>
     <h4 class="list-group-item-text">Field of Study: {{ edu.fieldOfStudy }}</h4>
