--- a/src/app/experiences/experience-detail/experience-detail.component.html
+++ b/src/app/experiences/experience-detail/experience-detail.component.html
@@ -17,7 +17,7 @@
     </button>
   </div>
 
-  <div class="pull-left">
+  <div class="pull-left" id="experience_details">
     <h3 class="list-group-item-heading" style="font-weight: bolder">Title: {{ exp.title }}</h3>
     <h4 class="list-group-item-text" style="font-weight: bold">Company Name: {{ exp.company }}</h4>
     <h4 class="list-group-item-text">Employment Type: {{ exp.empType }}</h4>
