--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,16 +10,16 @@
       </a>
     </div>
 
-    <form class="navbar-form navbar-left" action="#">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search">
-        <div class="input-group-btn">
-          <button class="btn btn-default" type="submit">
-            <i class="glyphicon glyphicon-search"></i>
-          </button>
-        </div>
-      </div>
-    </form>
+<!--    <form class="navbar-form navbar-left" action="#">-->
+<!--      <div class="input-group">-->
+<!--        <input type="text" class="form-control" placeholder="Search">-->
+<!--        <div class="input-group-btn">-->
+<!--          <button class="btn btn-default" type="submit">-->
+<!--            <i class="glyphicon glyphicon-search"></i>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </form>-->
 
     <div class="navbar-default">
       <ul class="nav navbar-nav navbar-right">
@@ -45,8 +45,8 @@
           <a [routerLink]="['/', uid, 'skills']">Skills</a>
         </li>
         <li
-          routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-          <a routerLink="/login">
+          routerLinkActive="active">
+          <a (click)="onLogout()" style="cursor: pointer">
             <span class="glyphicon glyphicon-log-out">
             </span>
             LogOut</a>
