--- a/src/app/skills-list/skill-item/skill-item.component.html
+++ b/src/app/skills-list/skill-item/skill-item.component.html
@@ -1,7 +1,7 @@
 <a
   class="list-group-item clearfix">
   <div class="pull-left">
-    <h3 class="list-group-item-heading">{{ skill }}</h3>
+    <h3 class="list-group-item-heading">{{ skill.skillName }}</h3>
   </div>
   <!--      <span class="pull-right">-->
   <!--        <img-->
@@ -11,7 +11,7 @@
   <!--          style="max-height: 50px;">-->
   <!--      </span>-->
   <div class="pull-right">
-    <button type="button" class="btn btn-link" id="btns">
+    <button type="button" class="btn btn-link" id="btns" (click)="onDelete()">
       <img
         src="https://image.freepik.com/free-icon/close-delete-remove-button_318-9073.jpg"
         alt="Delete"
