--- a/src/app/skills-list/skill-new/skill-new.component.html
+++ b/src/app/skills-list/skill-new/skill-new.component.html
@@ -27,6 +27,10 @@
             type="submit"
             class="btn btn-default"
             [disabled]="!newSkillForm.valid" style="margin-right: 5%">Add Skill</button>
+          <button
+            type="button"
+            class="btn btn-default" style="margin-right: 5%"
+          (click)="onBackSkill()">Back</button>
         </div>
       </div>
       <div class="row">
