--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12" id="about-css">
-    <router-outlet></router-outlet>
+    <h3>Please select an experience to view details!!</h3>
     <hr>
   </div>
 </div>
