--- a/src/app/educations/education-edit/education-edit.component.html
+++ b/src/app/educations/education-edit/education-edit.component.html
@@ -1,2 +1,152 @@
-<p *ngIf="editMode">education-edit works!</p>
-<p *ngIf="!editMode">new-education works!</p>
+<app-header></app-header>
+<!--<p *ngIf="editMode">education-edit works!</p>-->
+<!--<p *ngIf="!editMode">new-education works!</p>-->
+<div class="row formCss" id="about-css">
+  <div class="col-xs-12">
+    <h3 style="color: white">
+      {{ editMode ? 'Edit Education Details!' : 'Create New Education!' }}
+    </h3>
+    <form [formGroup]="UpdateEducationForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="school" style="color: white;">School Name</label>
+            <input
+              type="text"
+              id="school"
+              formControlName="school"
+              class="form-control"
+              name="school">
+            <span
+              *ngIf="!UpdateEducationForm.get('school').valid && UpdateEducationForm.get('school').touched"
+              class="help-block">Enter valid school name!</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="degree" style="color: white;">Degree</label>
+            <input
+              type="text"
+              id="degree"
+              formControlName="degree"
+              class="form-control"
+              name="degree">
+            <span
+              *ngIf="!UpdateEducationForm.get('degree').valid && UpdateEducationForm.get('degree').touched"
+              class="help-block">Enter valid degree!</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="field" style="color: white;">Field of Study</label>
+            <input
+              type="text"
+              id="field"
+              formControlName="field"
+              class="form-control"
+              name="field">
+            <span
+              *ngIf="!UpdateEducationForm.get('field').valid && UpdateEducationForm.get('field').touched"
+              class="help-block">Enter valid stream!</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="grade" style="color: white;">Grade (CGPA out of 10)</label>
+            <input
+              type="number" min="0" max="9.99" step="0.01"
+              id="grade"
+              formControlName="grade"
+              class="form-control"
+              name="grade">
+            <span
+              *ngIf="!UpdateEducationForm.get('grade').valid && UpdateEducationForm.get('grade').touched"
+              class="help-block">Enter valid grade!</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="startDate" style="color: white;">Start Date</label>
+            <input
+              type="date"
+              id="startDate"
+              formControlName="startDate"
+              class="form-control"
+              name="startDate">
+            <span
+              *ngIf="!UpdateEducationForm.get('startDate').valid && UpdateEducationForm.get('startDate').touched"
+              class="help-block">Enter valid date!</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="endDate" style="color: white;">End Date</label>
+            <input
+              type="date"
+              id="endDate"
+              formControlName="endDate"
+              class="form-control"
+              name="endDate">
+            <span
+              *ngIf="!UpdateEducationForm.get('endDate').valid &&
+              UpdateEducationForm.get('endDate').touched"
+              class="help-block">Enter valid date!</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description" style="color: white;">Description</label>
+            <textarea
+              type="text"
+              id="description"
+              formControlName="description"
+              class="md-textarea md-textarea-auto form-control"
+              rows="10"
+              columns="20"
+              name="description">
+            </textarea>
+            <span
+              *ngIf="!UpdateEducationForm.get('description').valid &&
+              UpdateEducationForm.get('description').touched"
+              class="help-block">Enter valid description!</span>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-xs-12 text-center">
+          <button
+            type="submit"
+            class="btn btn-default"
+            [disabled]="!UpdateEducationForm.valid" style="margin-right: 5%">
+            {{ editMode ? 'Update' : 'Create' }}
+          </button>
+          <button
+            type="button"
+            class="btn btn-default" style="margin-right: 5%"
+            (click)="onBackEducation()">Back</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 text-center">
+          <h3>
+             <span *ngIf="error"
+                   class="help-block">{{ message }}</span>
+          </h3>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
