--- a/src/app/educations/education-list/education-item/education-item.component.html
+++ b/src/app/educations/education-list/education-item/education-item.component.html
@@ -4,15 +4,8 @@
   routerLinkActive="active"
   style="cursor: pointer;">
   <div class="pull-left">
-    <h3 class="list-group-item-heading">{{ edu.school }}</h3>
-    <h4 class="list-group-item-text">{{ edu.degree }}, {{ edu.fieldOfStudy }}, {{ edu.grade }}</h4>
+    <h3 class="list-group-item-heading" style="font-weight: bolder">{{ edu.school }}</h3>
+    <h4 class="list-group-item-text" style="font-weight: bold">{{ edu.degree }}, {{ edu.field }}, {{ edu.grade }}</h4>
     <h4 class="list-group-item-text">{{ edu.startDate }} - {{ edu.endDate }}</h4>
   </div>
-  <!--      <span class="pull-right">-->
-  <!--        <img-->
-  <!--          [src]="edu.imagePath"-->
-  <!--          alt="{{ edu.name }}"-->
-  <!--          class="img-responsive"-->
-  <!--          style="max-height: 50px;">-->
-  <!--      </span>-->
 </a>
