--- a/src/app/experiences/experience-list/experience-item/experience-item.component.html
+++ b/src/app/experiences/experience-list/experience-item/experience-item.component.html
@@ -1,21 +1,13 @@
 <a
   class="list-group-item clearfix"
   [routerLink]="[index]"
-  [routerLinkActiveOptions]="{exact: true}"
   routerLinkActive="active"
 style="cursor: pointer;">
   <div class="pull-left">
     <h3 class="list-group-item-heading" style="font-weight: bolder">{{ exp.title }}</h3>
-    <h4 class="list-group-item-text" style="font-weight: bold">{{ exp.company }}</h4>
+    <h4 class="list-group-item-text" style="font-weight: bold">{{ exp.companyName }}</h4>
     <h4 class="list-group-item-text">{{ exp.empType }}</h4>
     <h4 class="list-group-item-text">{{ exp.startDate }} - {{ exp.endDate }}</h4>
     <h4 class="list-group-item-text">{{ exp.location }}</h4>
   </div>
-  <!--      <span class="pull-right">-->
-  <!--        <img-->
-  <!--          [src]="edu.imagePath"-->
-  <!--          alt="{{ edu.name }}"-->
-  <!--          class="img-responsive"-->
-  <!--          style="max-height: 50px;">-->
-  <!--      </span>-->
 </a>
