Skill edit functionality

--- a/src/app/skills-list/skill-item/skill-item.component.html
+++ b/src/app/skills-list/skill-item/skill-item.component.html
@@ -11,6 +11,13 @@
   <!--          style="max-height: 50px;">-->
   <!--      </span>-->
   <div class="pull-right">
+    <button type="button" class="btn btn-link" id="btns" (click)="onEditSkill()">
+      <img
+        src="https://image.flaticon.com/icons/png/512/1239/1239335.png"
+        alt="Edit"
+        class="img-responsive"
+        id="add-img">
+    </button>
     <button type="button" class="btn btn-link" id="btns" (click)="onDelete()">
       <img
         src="https://image.freepik.com/free-icon/close-delete-remove-button_318-9073.jpg"
