--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,8 @@
               class="form-control"
             name="password">
             <span
-              *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched"
+              *ngIf="!loginForm.get('password').valid &&
+              loginForm.get('password').touched"
               class="help-block">Password is required!</span>
           </div>
         </div>
