--- a/src/app/skills-list/skills-list.component.html
+++ b/src/app/skills-list/skills-list.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<!--<app-header></app-header>-->
 
-<div class="row">
+<div class="row" id="skills">
   <div class="col-xs-12" id="about-css">
     <a
       class="list-group-item clearfix">
