--- a/src/app/educations/education-list/education-item/education-item.component.html
+++ b/src/app/educations/education-list/education-item/education-item.component.html
@@ -1,8 +1,7 @@
 <a
   class="list-group-item clearfix"
-  [routerLink]="[index]"
   routerLinkActive="active"
-  style="cursor: pointer;">
+  style="cursor: pointer;" (click)="onClickEducation()">
   <div class="pull-left">
     <h3 class="list-group-item-heading" style="font-weight: bolder">{{ edu.school }}</h3>
     <h4 class="list-group-item-text" style="font-weight: bold">{{ edu.degree }}, {{ edu.field }}, {{ edu.grade }}</h4>
