--- a/src/app/educations/educations.component.html
+++ b/src/app/educations/educations.component.html
@@ -1,13 +1,8 @@
-<app-header></app-header>
+<!--<app-header></app-header>-->
 
 <div class="row">
   <div class="col-xs-12" id="about-css">
     <app-education-list></app-education-list>
-    <hr>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12" id="about-css">
     <h3>Please select an education to view details!!</h3>
     <hr>
   </div>
