--- a/src/app/experiences/experience-list/experience-item/experience-item.component.html
+++ b/src/app/experiences/experience-list/experience-item/experience-item.component.html
@@ -1,7 +1,7 @@
 <a
   class="list-group-item clearfix"
-  [routerLink]="[index]"
   routerLinkActive="active"
+  (click)="onClickExperience()"
 style="cursor: pointer;">
   <div class="pull-left">
     <h3 class="list-group-item-heading" style="font-weight: bolder">{{ exp.title }}</h3>
