--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-xs-12" id="about-css">
     <app-experience-list></app-experience-list>
-    <h3>Please select an experience to view details!!</h3>
+    <h4>Please select an experience to view details!</h4>
     <hr>
   </div>
 </div>
