--- a/src/app/educations/education-detail/education-detail.component.html
+++ b/src/app/educations/education-detail/education-detail.component.html
@@ -5,7 +5,7 @@
   <div class="pull-right">
     <button type="button" class="btn btn-link" id="btns" (click)="onEditEducation()">
       <img
-        src="https://image.flaticon.com/icons/png/512/1239/1239335.png"
+        src="https://cdn-icons-png.flaticon.com/512/1239/1239335.png?w=900"
         alt="Edit"
         class="img-responsive"
         id="add-img">
