--- a/src/app/skills-list/skills-list.component.html
+++ b/src/app/skills-list/skills-list.component.html
@@ -10,7 +10,7 @@
       <div class="pull-right">
         <button type="button" class="btn btn-link" id="btns" (click)="onNewSkill()">
           <img
-            src="https://image.flaticon.com/icons/png/512/1237/1237946.png"
+            src="https://cdn-icons-png.flaticon.com/512/1237/1237946.png?w=900"
             alt="Add"
             class="img-responsive"
             id="add-img">
